fixed legibility search bar

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -101,7 +101,7 @@ input {
   transition: all 0.2s ease-in-out;
   font-family: 'Unica One', cursive;
   letter-spacing: 1px;
-  color: gray;
+  color: $offblack;
   font-size: 20px;
 
   &:hover {
